# StereoSGM

./: .env  .gitignore  bargraph.py  evaluate.sh  exec.sh  main.py  paths.py  preprocess.py  preprocess_colorido.py  requirements.txt  rundataset.sh  train.py  train_colorido.py  train_mb.py
config/: config.py
evaluate/: __init__.py  badpixel.py  recall.py
lib/sgm_gpu/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cu  test.py
middlebury/: __init__.py  download_mb.sh  middlebury.py  preprocess_mb.py
middlebury/code/: computemask  disp2pfm  evaldisp  ii  pfm2png  png2pgm
middlebury/data.mb.imperfect_gray/: fname_submit.txt
models/: __init__.py  groupnorm.py  siamese.py  siamese.py.save  siamese_one_window.py
sgm/: __init__.py  direction.py  paths.py  sgm.py
sgm/utils/: __init__.py  distances.py  image.py  path.py
utils/: __init__.py  augumentation.py  distances.py  files.py  image.py  path.py  weights.py
